AG-44704 Prevent notifications scroll from appearing on welcome
Squashed commit of the following:

commit de19a6c8d1f17a54e04b2816009b5bcf73a8df5f
Merge: 015c52408 4bca04bc3
Author: Anatolii Khamrskii <a.khmarskii@adguard.com>
Date:   Fri Oct 31 17:12:40 2025 +0300

    Merge branch 'refs/heads/release/v5.3' into fix/AG-44704

commit 015c524081afa62b85726a5391e862d2dce9a99e
Author: Anatolii Khamrskii <a.khmarskii@adguard.com>
Date:   Thu Oct 30 16:32:29 2025 +0300

    AG-44704 Increase size for all locales to fit

commit 628ea2527ac3705941985cecc1aba93637624d61
Author: Anatolii Khamrskii <a.khmarskii@adguard.com>
Date:   Mon Oct 27 15:50:30 2025 +0300

    AG-44704 Prevent notifications scroll from appearing on welcome

--- a/Extension/assets/css/rules-limits-container.css
+++ b/Extension/assets/css/rules-limits-container.css
@@ -9,5 +9,7 @@
     bottom: 16px;
     right: 16px;
     border: none;
+    /* Size to fit on all locales */
     width: 376px;
+    height: 200px;
 }
